--- a/base-ubuntu/Dockerfile-rpi
+++ b/base-ubuntu/Dockerfile-rpi
@@ -20,8 +20,7 @@ RUN apt-get update --fix-missing --no-install-recommends \
     && python3 get-pip.py && rm get-pip.py \
     && pip3 install --upgrade pip \
     && apt-get clean all \
-    && rm -rf /var/lib/apt/lists/* \
-    && chmod +x /usr/local/bin/wait-for-it
+    && rm -rf /var/lib/apt/lists/*
 
 ENV USER=wirepas
 ENV HOME=/home/wirepas
